Unify global heading styles and update vibe coding definition
- Set all prose headings (h1–h4) to bold and consistent font sizes globally; underlined h2 is now default everywhere
- Removed redundant prose-h2/prose-headings classes from layouts
- Fixed canonicalURL prop type in SeriesLayout.astro for Astro v5+ compatibility
- Updated the definition of "vibe coding" on the about page to match the article's precise explanation
- Corrected CHANGELOG timestamps to reflect actual change times

--- a/src/components/AuthorBio.astro
+++ b/src/components/AuthorBio.astro
@@ -1,10 +1,9 @@
 ---
 ---
 
-<div class="author-bio bg-gray-50 p-6 rounded-lg mt-8">
-  <div class="flex items-center">
+<div class="author-bio bg-gray-50 p-6 rounded-lg mt-8">  <div class="flex items-center">
     <div class="flex-shrink-0">
-      <img class="h-14 w-14 rounded-full" src="/images/author-jell.svg" alt="JELL" onerror="this.src='/images/author-placeholder.svg'">
+      <img class="h-14 w-14 rounded-full" src="/images/author-jell.svg" alt="JELL" loading="lazy" onerror="this.src='/images/author-placeholder.svg'">
     </div>
     <div class="ml-4">
       <h3 class="text-lg font-medium text-gray-900">JELL</h3>
