--- a/src/components/ConsentPopup.astro
+++ b/src/components/ConsentPopup.astro
@@ -13,7 +13,7 @@
       popup.innerHTML = `
         <div class='bg-white rounded-lg shadow-lg p-6 max-w-md w-full text-gray-900' role='dialog' aria-modal='true' aria-labelledby='consent-title'>
           <h2 id='consent-title' class='text-lg font-semibold mb-2'>Analytics Consent</h2>
-          <p class='mb-4'>We use Google Tag Manager to collect analytics data to improve your experience. You can opt out at any time.</p>
+          <p class='mb-4'>We use Google Tag Manager to collect usage data because we're curious nerds who love understanding how people interact with our content. This helps us make better articles and features. We're not selling your data - we just love patterns and behaviors!</p>
           <div class='flex gap-2 justify-end'>
             <button id='decline-btn' class='px-4 py-2 rounded bg-gray-200 hover:bg-gray-300'>Decline</button>
             <button id='accept-btn' class='px-4 py-2 rounded bg-blue-600 text-white hover:bg-blue-700'>Accept</button>
